--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,14 +11,15 @@ layout: default
         {{ page.date | date: date_format }}
       </time>
       {%- if page.author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
+      • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card"
+          itemprop="name">{{ page.author }}</span></span>
       {%- endif -%}
       {%- if page.categories.size > 0 -%}
-        • <span class="post-categories">
-          {%- for category in page.categories -%}
-            <span class="category">{{ category }}</span>{% unless forloop.last %}, {% endunless %}
-          {%- endfor -%}
-        </span>
+      • <span class="post-categories">
+        {%- for category in page.categories -%}
+        <span class="category">{{ category }}</span>{% unless forloop.last %}, {% endunless %}
+        {%- endfor -%}
+      </span>
       {%- endif -%}
     </p>
   </header>
@@ -28,16 +29,16 @@ layout: default
   </div>
 
   {%- if page.tags.size > 0 -%}
-    <div class="post-tags">
-      <strong>Tags:</strong>
-      {%- for tag in page.tags -%}
-        <span class="tag">{{ tag }}</span>{% unless forloop.last %}, {% endunless %}
-      {%- endfor -%}
-    </div>
+  <div class="post-tags">
+    <strong>Tags:</strong>
+    {%- for tag in page.tags -%}
+    <span class="tag">{{ tag }}</span>{% unless forloop.last %}, {% endunless %}
+    {%- endfor -%}
+  </div>
   {%- endif -%}
 
   {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
+  {%- include disqus_comments.html -%}
   {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
@@ -45,14 +46,14 @@ layout: default
 
 <div class="post-navigation">
   {%- if page.previous.url -%}
-    <a class="prev-post" href="{{ page.previous.url | relative_url }}">
-      ← {{ page.previous.title }}
-    </a>
+  <a class="prev-post" href="{{ page.previous.url | relative_url }}">
+    ← {{ page.previous.title }}
+  </a>
   {%- endif -%}
-  
+
   {%- if page.next.url -%}
-    <a class="next-post" href="{{ page.next.url | relative_url }}">
-      {{ page.next.title }} →
-    </a>
+  <a class="next-post" href="{{ page.next.url | relative_url }}">
+    {{ page.next.title }} →
+  </a>
   {%- endif -%}
 </div>
