--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ " /" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="site-title" rel="author" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
 
     {%- if page_paths -%}
     <nav class="site-nav">
@@ -18,10 +18,10 @@
       </label>
 
       <div class="trigger">
-        <a class="page-link" href="{{ " /" | relative_url }}">Home</a>
-        <a class="page-link" href="{{ " /blog/" | relative_url }}">Blog</a>
-        <a class="page-link" href="{{ " /projects/" | relative_url }}">Projects</a>
-        <a class="page-link" href="{{ " /contact/" | relative_url }}">Contact</a>
+        <a class="page-link" href="{{ '/' | relative_url }}">Home</a>
+        <a class="page-link" href="{{ '/blog/' | relative_url }}">Blog</a>
+        <a class="page-link" href="{{ '/projects/' | relative_url }}">Projects</a>
+        <a class="page-link" href="{{ '/contact/' | relative_url }}">Contact</a>
         {%- for path in page_paths -%}
         {%- assign my_page = site.pages | where: "path", path | first -%}
         {%- if my_page.title and my_page.title != "Blog" and my_page.title != "Contact" and my_page.title != "Projects"
