--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -74,7 +74,7 @@ body {
     background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
-.from-blue-500 {
+.from-gray-500 {
     --tw-gradient-from: #3b82f6;
     --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgba(59, 130, 246, 0));
 }
@@ -123,7 +123,7 @@ body {
     border-left-width: 4px;
 }
 
-.border-blue-500 {
+.border-gray-500 {
     border-color: #3b82f6;
 }
 
