finally able to fix all the css issues and get a good working version of the site up and running.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,13 +4,13 @@
 
       <!-- Desktop Navigation -->
       <nav class="hidden md:flex space-x-8">
-        <a class="font-medium px-6 py-2 rounded-lg transition-colors {% if page.url == '/' or page.url == '/index.html' %}text-white bg-gray-900 {% else %} bg-transparent text-gray-900 hover:text-white border border-transparent hover:border-gray-400{% endif %}"
+        <a class="font-medium px-6 py-2 rounded-lg transition-colors {% if page.url == '/' or page.url == '/index.html' %}text-white bg-gray-900 {% else %} bg-transparent text-gray-900 hover:text-black border border-transparent hover:border-gray-400{% endif %}"
           href="{{ '/' | relative_url }}">Home</a>
-        <a class="font-medium px-6 py-2 rounded-lg transition-colors {% if page.url == '/blog/' or page.url == '/blog/index.html' %}text-white bg-gray-900 {% else %} bg-transparent text-gray-900 hover:text-white border border-transparent hover:border-gray-400{% endif %}"
+        <a class="font-medium px-6 py-2 rounded-lg transition-colors {% if page.url == '/blog/' or page.url == '/blog/index.html' %}text-white bg-gray-900 {% else %} bg-transparent text-gray-900 hover:text-black border border-transparent hover:border-gray-400{% endif %}"
           href="{{ '/blog/' | relative_url }}">Blog</a>
-        <a class="font-medium px-6 py-2 rounded-lg transition-colors {% if page.url == '/projects/' or page.url == '/projects/index.html' %}text-white bg-gray-900 {% else %} bg-transparent text-gray-900 hover:text-white border border-transparent hover:border-gray-400{% endif %}"
+        <a class="font-medium px-6 py-2 rounded-lg transition-colors {% if page.url == '/projects/' or page.url == '/projects/index.html' %}text-white bg-gray-900 {% else %} bg-transparent text-gray-900 hover:text-black border border-transparent hover:border-gray-400{% endif %}"
           href="{{ '/projects/' | relative_url }}">Projects</a>
-        <a class="font-medium px-6 py-2 rounded-lg transition-colors {% if page.url == '/contact/' or page.url == '/contact/index.html' %}text-white bg-gray-900 {% else %} bg-transparent text-gray-900 hover:text-white border border-transparent hover:border-gray-400{% endif %}"
+        <a class="font-medium px-6 py-2 rounded-lg transition-colors {% if page.url == '/contact/' or page.url == '/contact/index.html' %}text-white bg-gray-900 {% else %} bg-transparent text-gray-900 hover:text-black border border-transparent hover:border-gray-400{% endif %}"
           href="{{ '/contact/' | relative_url }}">Contact</a>
       </nav>
 
