--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ layout: default
       </header>
 
       <div class="prose prose-lg max-w-none leading-relaxed" itemprop="articleBody">
-        <div class="text-gray-900">
+        <div class="text-gray-900 text-wrap">
           {{ content }}
         </div>
       </div>
