--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,8 +1,7 @@
----
----
-// Import external stylesheets
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url("https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css");
+--- 
+--- 
+// Import external stylesheets via HTML head instead of SCSS to avoid GitHub Pages issues
+// Fonts and Tailwind CSS will be loaded in _includes/head.html
 
 // Global font family
 * {
@@ -30,6 +29,12 @@
         max-width: 800px;
         margin: 0 auto;
     }
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 1rem;
 }
 
 .content-overview {
