--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -58,6 +58,22 @@ body {
     margin-bottom: 2rem;
 }
 
+.mt-2 {
+    margin-top: 0.5rem;
+}
+
+.mt-4 {
+    margin-top: 1rem;
+}
+
+.mt-6 {
+    margin-top: 1.5rem;
+}
+
+.mt-8 {
+    margin-top: 2rem;
+}
+
 .p-4 {
     padding: 1rem;
 }
