--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
           {%- if page.categories.size > 0 -%}
           • <span class="post-categories">
             {%- for category in page.categories -%}
-            <span class="bg-blue-100 text-blue-800 px-2 py-1 rounded text-sm">{{ category }}</span>{% unless
+            <span class="bg-blue-100 text-blue-800 px-2 py-1 rounded text-sm mx-1">{{ category }}</span>{% unless
             forloop.last %} {% endunless %}
             {%- endfor -%}
           </span>
