adding contact/social media links on header

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,4 +1,6 @@
---- --- // Import external stylesheets via HTML head instead of SCSS to avoid GitHub Pages issues
+--- 
+--- 
+// Import external stylesheets via HTML head instead of SCSS to avoid GitHub Pages issues
 // Fonts and Tailwind CSS will be loaded in _includes/head.html
 
 // Global font family
