--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,4 +24,5 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
   {%- include google-analytics.html -%}
   {%- endif -%}
+  <script src="{{ '/assets/js/code-copy.js' | relative_url }}" defer></script>
 </head>
