--- a/assets/main.scss
+++ b/assets/main.scss
@@ -561,7 +561,12 @@ ul {
         font-size: 1rem;
         max-width: none;
 
-        h1, h2, h3, h4, h5, h6 {
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6 {
             color: #111827;
             font-weight: 600;
             margin-top: 2rem;
@@ -586,7 +591,8 @@ ul {
             font-size: 1.125rem;
         }
 
-        h5, h6 {
+        h5,
+        h6 {
             font-size: 1rem;
         }
 
@@ -595,7 +601,8 @@ ul {
             color: #374151;
         }
 
-        ul, ol {
+        ul,
+        ol {
             margin-bottom: 1rem;
             padding-left: 1.5rem;
         }
@@ -643,7 +650,8 @@ ul {
             margin: 1rem 0;
         }
 
-        th, td {
+        th,
+        td {
             border: 1px solid #e5e7eb;
             padding: 0.5rem;
             text-align: left;
@@ -938,35 +946,46 @@ ul {
     border: none;
 }
 
+/* Reset table cell defaults */
 .highlighter-rouge .highlight td,
 .highlighter-rouge .highlight .rouge-gutter,
 .highlighter-rouge .highlight .rouge-code {
-    padding: 0;
     border: none;
     vertical-align: top;
+    padding: 0;
 }
 
-/* Line numbers column */
-.highlighter-rouge .highlight .rouge-gutter,
-.highlighter-rouge .highlight .lineno {
+/* Line numbers column - targets Rouge's actual HTML structure */
+.highlighter-rouge .highlight .rouge-gutter.gl {
     background-color: #f6f8fa;
-    color: #656d76;
-    text-align: right;
-    padding: 0.75rem 0.5rem;
     border-right: 1px solid #d1d9e0;
     user-select: none;
     min-width: 3rem;
     width: 3rem;
+    vertical-align: top;
+    padding: 0;
+}
+
+/* Line numbers text styling - ensures perfect alignment */
+.highlighter-rouge .highlight .rouge-gutter.gl .lineno {
+    background-color: #f6f8fa;
+    color: #656d76;
+    text-align: right;
+    padding: 0.75rem 0.5rem;
+    margin: 0;
     font-size: 0.875rem;
+    line-height: 1.45;
     font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
+    border: none;
 }
 
 /* Code content column */
 .highlighter-rouge .highlight .rouge-code {
     width: 100%;
     overflow-x: auto;
-    padding: 0;
+    padding: 0 !important;
     background: transparent;
+    vertical-align: top;
 }
 
 /* Code content styling */
@@ -974,7 +993,7 @@ ul {
 .highlighter-rouge .highlight pre {
     background: transparent;
     margin: 0;
-    padding: 0.75rem 1rem;
+    padding: 0.75rem 1rem !important;
     color: #1f2328;
     white-space: pre;
     overflow-x: auto;
@@ -988,6 +1007,7 @@ ul {
     min-height: 2.5rem;
     border: none;
     border-radius: 0;
+    vertical-align: top;
 }
 
 /* Inline code styles */
@@ -1067,19 +1087,24 @@ code.highlighter-rouge,
         border-right: none;
     }
 
-    .highlight .rouge-gutter,
-    .highlight .lineno {
+    .highlight .rouge-gutter.gl {
         min-width: 2.5rem;
         width: 2.5rem;
+    }
+
+    .highlight .rouge-gutter.gl .lineno {
         padding: 0.5rem 0.25rem;
         font-size: 0.75rem;
+        line-height: 1.45;
     }
 
     .highlight .rouge-code pre,
     .highlight pre {
-        padding: 0.75rem 0.5rem;
+        padding: 0.75rem 0.5rem !important;
         font-size: 0.8rem;
+        line-height: 1.45;
         overflow-x: auto;
+        vertical-align: top;
     }
 
     .copy-code-btn {
@@ -1091,65 +1116,314 @@ code.highlighter-rouge,
 }
 
 /* Clean GitHub-style syntax highlighting colors */
-.highlight .c { color: #6a737d; } /* Comment */
-.highlight .err { color: #cb2431; } /* Error */
-.highlight .k { color: #d73a49; } /* Keyword */
-.highlight .l { color: #032f62; } /* Literal */
-.highlight .n { color: #24292e; } /* Name */
-.highlight .o { color: #d73a49; } /* Operator */
-.highlight .p { color: #24292e; } /* Punctuation */
-.highlight .cm { color: #6a737d; } /* Comment.Multiline */
-.highlight .cp { color: #d73a49; } /* Comment.Preproc */
-.highlight .c1 { color: #6a737d; } /* Comment.Single */
-.highlight .cs { color: #6a737d; } /* Comment.Special */
-.highlight .gd { color: #cb2431; } /* Generic.Deleted */
-.highlight .ge { font-style: italic; } /* Generic.Emph */
-.highlight .gh { color: #005cc5; font-weight: bold; } /* Generic.Heading */
-.highlight .gi { color: #22863a; } /* Generic.Inserted */
-.highlight .gp { color: #6a737d; } /* Generic.Prompt */
-.highlight .gs { font-weight: bold; } /* Generic.Strong */
-.highlight .gu { color: #24292e; } /* Generic.Subheading */
-.highlight .kc { color: #005cc5; } /* Keyword.Constant */
-.highlight .kd { color: #d73a49; } /* Keyword.Declaration */
-.highlight .kn { color: #d73a49; } /* Keyword.Namespace */
-.highlight .kp { color: #d73a49; } /* Keyword.Pseudo */
-.highlight .kr { color: #d73a49; } /* Keyword.Reserved */
-.highlight .kt { color: #d73a49; } /* Keyword.Type */
-.highlight .ld { color: #032f62; } /* Literal.Date */
-.highlight .m { color: #005cc5; } /* Literal.Number */
-.highlight .s { color: #032f62; } /* Literal.String */
-.highlight .na { color: #6f42c1; } /* Name.Attribute */
-.highlight .nb { color: #005cc5; } /* Name.Builtin */
-.highlight .nc { color: #6f42c1; } /* Name.Class */
-.highlight .no { color: #005cc5; } /* Name.Constant */
-.highlight .nd { color: #6f42c1; } /* Name.Decorator */
-.highlight .ni { color: #24292e; } /* Name.Entity */
-.highlight .ne { color: #6f42c1; } /* Name.Exception */
-.highlight .nf { color: #6f42c1; } /* Name.Function */
-.highlight .nl { color: #24292e; } /* Name.Label */
-.highlight .nn { color: #6f42c1; } /* Name.Namespace */
-.highlight .nx { color: #24292e; } /* Name.Other */
-.highlight .py { color: #24292e; } /* Name.Property */
-.highlight .nt { color: #22863a; } /* Name.Tag */
-.highlight .nv { color: #e36209; } /* Name.Variable */
-.highlight .ow { color: #d73a49; } /* Operator.Word */
-.highlight .w { color: #24292e; } /* Text.Whitespace */
-.highlight .mf { color: #005cc5; } /* Literal.Number.Float */
-.highlight .mh { color: #005cc5; } /* Literal.Number.Hex */
-.highlight .mi { color: #005cc5; } /* Literal.Number.Integer */
-.highlight .mo { color: #005cc5; } /* Literal.Number.Oct */
-.highlight .sb { color: #032f62; } /* Literal.String.Backtick */
-.highlight .sc { color: #032f62; } /* Literal.String.Char */
-.highlight .sd { color: #6a737d; } /* Literal.String.Doc */
-.highlight .s2 { color: #032f62; } /* Literal.String.Double */
-.highlight .se { color: #032f62; } /* Literal.String.Escape */
-.highlight .sh { color: #032f62; } /* Literal.String.Heredoc */
-.highlight .si { color: #032f62; } /* Literal.String.Interpol */
-.highlight .sx { color: #032f62; } /* Literal.String.Other */
-.highlight .sr { color: #032f62; } /* Literal.String.Regex */
-.highlight .s1 { color: #032f62; } /* Literal.String.Single */
-.highlight .ss { color: #032f62; } /* Literal.String.Symbol */
-.highlight .bp { color: #005cc5; } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #e36209; } /* Name.Variable.Class */
-.highlight .vg { color: #e36209; } /* Name.Variable.Global */
-.highlight .vi { color: #e36209; } /* Name.Variable.Instance */
+.highlight .c {
+    color: #6a737d;
+}
+
+/* Comment */
+.highlight .err {
+    color: #cb2431;
+}
+
+/* Error */
+.highlight .k {
+    color: #d73a49;
+}
+
+/* Keyword */
+.highlight .l {
+    color: #032f62;
+}
+
+/* Literal */
+.highlight .n {
+    color: #24292e;
+}
+
+/* Name */
+.highlight .o {
+    color: #d73a49;
+}
+
+/* Operator */
+.highlight .p {
+    color: #24292e;
+}
+
+/* Punctuation */
+.highlight .cm {
+    color: #6a737d;
+}
+
+/* Comment.Multiline */
+.highlight .cp {
+    color: #d73a49;
+}
+
+/* Comment.Preproc */
+.highlight .c1 {
+    color: #6a737d;
+}
+
+/* Comment.Single */
+.highlight .cs {
+    color: #6a737d;
+}
+
+/* Comment.Special */
+.highlight .gd {
+    color: #cb2431;
+}
+
+/* Generic.Deleted */
+.highlight .ge {
+    font-style: italic;
+}
+
+/* Generic.Emph */
+.highlight .gh {
+    color: #005cc5;
+    font-weight: bold;
+}
+
+/* Generic.Heading */
+.highlight .gi {
+    color: #22863a;
+}
+
+/* Generic.Inserted */
+.highlight .gp {
+    color: #6a737d;
+}
+
+/* Generic.Prompt */
+.highlight .gs {
+    font-weight: bold;
+}
+
+/* Generic.Strong */
+.highlight .gu {
+    color: #24292e;
+}
+
+/* Generic.Subheading */
+.highlight .kc {
+    color: #005cc5;
+}
+
+/* Keyword.Constant */
+.highlight .kd {
+    color: #d73a49;
+}
+
+/* Keyword.Declaration */
+.highlight .kn {
+    color: #d73a49;
+}
+
+/* Keyword.Namespace */
+.highlight .kp {
+    color: #d73a49;
+}
+
+/* Keyword.Pseudo */
+.highlight .kr {
+    color: #d73a49;
+}
+
+/* Keyword.Reserved */
+.highlight .kt {
+    color: #d73a49;
+}
+
+/* Keyword.Type */
+.highlight .ld {
+    color: #032f62;
+}
+
+/* Literal.Date */
+.highlight .m {
+    color: #005cc5;
+}
+
+/* Literal.Number */
+.highlight .s {
+    color: #032f62;
+}
+
+/* Literal.String */
+.highlight .na {
+    color: #6f42c1;
+}
+
+/* Name.Attribute */
+.highlight .nb {
+    color: #005cc5;
+}
+
+/* Name.Builtin */
+.highlight .nc {
+    color: #6f42c1;
+}
+
+/* Name.Class */
+.highlight .no {
+    color: #005cc5;
+}
+
+/* Name.Constant */
+.highlight .nd {
+    color: #6f42c1;
+}
+
+/* Name.Decorator */
+.highlight .ni {
+    color: #24292e;
+}
+
+/* Name.Entity */
+.highlight .ne {
+    color: #6f42c1;
+}
+
+/* Name.Exception */
+.highlight .nf {
+    color: #6f42c1;
+}
+
+/* Name.Function */
+.highlight .nl {
+    color: #24292e;
+}
+
+/* Name.Label */
+.highlight .nn {
+    color: #6f42c1;
+}
+
+/* Name.Namespace */
+.highlight .nx {
+    color: #24292e;
+}
+
+/* Name.Other */
+.highlight .py {
+    color: #24292e;
+}
+
+/* Name.Property */
+.highlight .nt {
+    color: #22863a;
+}
+
+/* Name.Tag */
+.highlight .nv {
+    color: #e36209;
+}
+
+/* Name.Variable */
+.highlight .ow {
+    color: #d73a49;
+}
+
+/* Operator.Word */
+.highlight .w {
+    color: #24292e;
+}
+
+/* Text.Whitespace */
+.highlight .mf {
+    color: #005cc5;
+}
+
+/* Literal.Number.Float */
+.highlight .mh {
+    color: #005cc5;
+}
+
+/* Literal.Number.Hex */
+.highlight .mi {
+    color: #005cc5;
+}
+
+/* Literal.Number.Integer */
+.highlight .mo {
+    color: #005cc5;
+}
+
+/* Literal.Number.Oct */
+.highlight .sb {
+    color: #032f62;
+}
+
+/* Literal.String.Backtick */
+.highlight .sc {
+    color: #032f62;
+}
+
+/* Literal.String.Char */
+.highlight .sd {
+    color: #6a737d;
+}
+
+/* Literal.String.Doc */
+.highlight .s2 {
+    color: #032f62;
+}
+
+/* Literal.String.Double */
+.highlight .se {
+    color: #032f62;
+}
+
+/* Literal.String.Escape */
+.highlight .sh {
+    color: #032f62;
+}
+
+/* Literal.String.Heredoc */
+.highlight .si {
+    color: #032f62;
+}
+
+/* Literal.String.Interpol */
+.highlight .sx {
+    color: #032f62;
+}
+
+/* Literal.String.Other */
+.highlight .sr {
+    color: #032f62;
+}
+
+/* Literal.String.Regex */
+.highlight .s1 {
+    color: #032f62;
+}
+
+/* Literal.String.Single */
+.highlight .ss {
+    color: #032f62;
+}
+
+/* Literal.String.Symbol */
+.highlight .bp {
+    color: #005cc5;
+}
+
+/* Name.Builtin.Pseudo */
+.highlight .vc {
+    color: #e36209;
+}
+
+/* Name.Variable.Class */
+.highlight .vg {
+    color: #e36209;
+}
+
+/* Name.Variable.Global */
+.highlight .vi {
+    color: #e36209;
+}
+
+/* Name.Variable.Instance */
